--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.16",
     "install": "^0.13.0",
+    "lucide-react": "^0.552.0",
     "npm": "^11.6.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
