--- a/.github/workflows/pr-approval.yml
+++ b/.github/workflows/pr-approval.yml
@@ -16,7 +16,9 @@ jobs:
   create-approval-issue:
     name: Create Approval Issue
     runs-on: ubuntu-latest
-    if: github.event_name == 'pull_request' && github.event.pull_request.base.ref == 'main'
+    if: github.event_name == 'pull_request' && github.event.pull_request.base.ref == 'main' && github.event.pull_request.head.ref == 'development'
+    outputs:
+      issue_number: ${{ steps.create_issue.outputs.issue_number }}
     steps:
       - name: Check if approval issue already exists
         id: check_issue
@@ -37,6 +39,7 @@ jobs:
           fi
 
       - name: Create approval issue
+        id: create_issue
         if: steps.check_issue.outputs.issue_exists == 'false'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -70,9 +73,11 @@ jobs:
 
           ## ✅ How to Approve
 
-          To approve and merge this PR, comment one of the following:
+          To approve and merge this PR, comment one of the following (case-insensitive):
           - \`approved\`
           - \`approve\`
+          - \`yes\`
+          - \`confirm\`
 
           The PR will be automatically merged and this issue will be closed.
 
@@ -80,9 +85,11 @@ jobs:
 
           ## ❌ How to Reject
 
-          To reject this PR, comment:
+          To reject this PR, comment (case-insensitive):
           - \`rejected\`
           - \`reject\`
+          - \`no\`
+          - \`deny\`
 
           The PR will remain open but marked as needing changes.
 
@@ -93,12 +100,22 @@ jobs:
           ---
           *This issue was automatically created by the PR approval workflow.*"
 
-          gh issue create \
+          ISSUE_URL=$(gh issue create \
             --repo ${{ github.repository }} \
             --title "🔒 PR #$PR_NUMBER Approval Request: $PR_TITLE" \
             --body "$ISSUE_BODY" \
             --label "approval-required,pr-review" \
-            --assignee "dhrupeshbrahmbhatt"
+            --assignee "dhrupeshbrahmbhatt")
+
+          ISSUE_NUM=$(echo "$ISSUE_URL" | grep -oP '[0-9]+$')
+          echo "issue_number=$ISSUE_NUM" >> $GITHUB_OUTPUT
+          echo "Created issue #$ISSUE_NUM"
+
+      - name: Use existing issue number
+        if: steps.check_issue.outputs.issue_exists == 'true'
+        id: use_existing
+        run: |
+          echo "issue_number=${{ steps.check_issue.outputs.issue_number }}" >> $GITHUB_OUTPUT
 
       - name: Comment on PR with approval instructions
         env:
@@ -113,13 +130,82 @@ jobs:
 
           This PR targets the **main** branch and requires manual approval before merging.
 
-          An approval issue has been created. An authorized user must comment \`approved\` or \`approve\` on the approval issue to merge this PR.
+          An approval issue has been created. An authorized user must comment \`approved\`, \`approve\`, \`yes\`, or \`confirm\` on the approval issue to merge this PR.
 
           **Note:** Direct merges to main are blocked until approval is granted.
 
           ---
           *This is an automated message from the PR approval workflow.*"
           fi
+
+  wait-for-approval:
+    name: ⏳ Waiting for Approval (5 min timeout)
+    runs-on: ubuntu-latest
+    needs: create-approval-issue
+    if: github.event_name == 'pull_request' && github.event.pull_request.base.ref == 'main' && github.event.pull_request.head.ref == 'development'
+    steps:
+      - name: Wait for manual approval
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          PR_NUMBER: ${{ github.event.pull_request.number }}
+        run: |
+          echo "🕐 Waiting for manual approval..."
+          echo "An authorized user must comment 'approved', 'approve', 'yes', or 'confirm' on the approval issue."
+          echo ""
+          echo "Checking for approval every 30 seconds for 5 minutes..."
+          echo ""
+
+          TIMEOUT=300  # 5 minutes in seconds
+          INTERVAL=30  # Check every 30 seconds
+          ELAPSED=0
+
+          while [ $ELAPSED -lt $TIMEOUT ]; do
+            echo "⏳ Elapsed: ${ELAPSED}s / ${TIMEOUT}s - Checking for approval..."
+
+            # Search for approval issue
+            ISSUE_NUMBER=$(gh issue list --repo ${{ github.repository }} --state open --search "PR #$PR_NUMBER Approval Request" --json number --jq '.[0].number' 2>/dev/null || echo "")
+
+            if [[ -n "$ISSUE_NUMBER" ]]; then
+              # Check comments on the issue for approval
+              APPROVAL_FOUND=$(gh api repos/${{ github.repository }}/issues/$ISSUE_NUMBER/comments --jq '.[] | select(.user.login == "dhrupeshbrahmbhatt") | .body' | tr '[:upper:]' '[:lower:]' | grep -E '^(approved|approve|yes|confirm)$' | head -1 || echo "")
+
+              if [[ -n "$APPROVAL_FOUND" ]]; then
+                echo "✅ Approval found! Comment: $APPROVAL_FOUND"
+                echo "🚀 Proceeding to merge PR #$PR_NUMBER..."
+
+                # Merge the PR
+                gh pr merge $PR_NUMBER --merge --repo ${{ github.repository }}
+                echo "✅ PR #$PR_NUMBER merged successfully!"
+
+                # Close the issue
+                gh issue close $ISSUE_NUMBER --repo ${{ github.repository }} --comment "✅ PR approved and merged automatically."
+
+                exit 0
+              fi
+
+              # Check for rejection
+              REJECTION_FOUND=$(gh api repos/${{ github.repository }}/issues/$ISSUE_NUMBER/comments --jq '.[] | select(.user.login == "dhrupeshbrahmbhatt") | .body' | tr '[:upper:]' '[:lower:]' | grep -E '^(rejected|reject|no|deny)$' | head -1 || echo "")
+
+              if [[ -n "$REJECTION_FOUND" ]]; then
+                echo "❌ PR was rejected with comment: $REJECTION_FOUND"
+                gh pr comment $PR_NUMBER --repo ${{ github.repository }} --body "## ❌ PR Rejected
+
+          This PR has been rejected by an authorized reviewer.
+
+          Please review the feedback and make necessary changes before requesting approval again."
+                exit 1
+              fi
+            fi
+
+            sleep $INTERVAL
+            ELAPSED=$((ELAPSED + INTERVAL))
+          done
+
+          echo ""
+          echo "⏰ Timeout reached (5 minutes). No approval received."
+          echo "The PR remains open. An authorized user can still approve by commenting on the approval issue."
+          echo "Once approved via issue comment, a separate workflow run will handle the merge."
+          exit 0
 
   check-approval:
     name: Check for Approval Comment
@@ -184,12 +270,24 @@ jobs:
             fi
           done
 
+          # Simple approval keywords: approved, approve, yes, confirm
+          IS_APPROVAL=false
+          if [[ "$COMMENT_LOWER" == "approved" || "$COMMENT_LOWER" == "approve" || "$COMMENT_LOWER" == "yes" || "$COMMENT_LOWER" == "confirm" ]]; then
+            IS_APPROVAL=true
+          fi
+
+          # Simple rejection keywords: rejected, reject, no, deny
+          IS_REJECTION=false
+          if [[ "$COMMENT_LOWER" == "rejected" || "$COMMENT_LOWER" == "reject" || "$COMMENT_LOWER" == "no" || "$COMMENT_LOWER" == "deny" ]]; then
+            IS_REJECTION=true
+          fi
+
           if [[ "$IS_AUTHORIZED" == "true" ]]; then
-            if [[ "$COMMENT_LOWER" == "approved" || "$COMMENT_LOWER" == "approve" ]]; then
+            if [[ "$IS_APPROVAL" == "true" ]]; then
               echo "approved=true" >> $GITHUB_OUTPUT
               echo "rejected=false" >> $GITHUB_OUTPUT
               echo "✅ PR approved by authorized user"
-            elif [[ "$COMMENT_LOWER" == "rejected" || "$COMMENT_LOWER" == "reject" ]]; then
+            elif [[ "$IS_REJECTION" == "true" ]]; then
               echo "approved=false" >> $GITHUB_OUTPUT
               echo "rejected=true" >> $GITHUB_OUTPUT
               echo "❌ PR rejected by authorized user"
@@ -200,7 +298,7 @@ jobs:
           else
             echo "approved=false" >> $GITHUB_OUTPUT
             echo "rejected=false" >> $GITHUB_OUTPUT
-            if [[ "$COMMENT_LOWER" == "approved" || "$COMMENT_LOWER" == "approve" ]]; then
+            if [[ "$IS_APPROVAL" == "true" ]]; then
               echo "⚠️ User $COMMENT_AUTHOR is not authorized to approve"
             fi
           fi
@@ -224,7 +322,13 @@ jobs:
             fi
           done
 
-          if [[ "$IS_AUTHORIZED" == "false" && ("$COMMENT_LOWER" == "approved" || "$COMMENT_LOWER" == "approve") ]]; then
+          # Check if it's an approval attempt
+          IS_APPROVAL_ATTEMPT=false
+          if [[ "$COMMENT_LOWER" == "approved" || "$COMMENT_LOWER" == "approve" || "$COMMENT_LOWER" == "yes" || "$COMMENT_LOWER" == "confirm" ]]; then
+            IS_APPROVAL_ATTEMPT=true
+          fi
+
+          if [[ "$IS_AUTHORIZED" == "false" && "$IS_APPROVAL_ATTEMPT" == "true" ]]; then
             gh issue comment ${{ github.event.issue.number }} \
               --repo ${{ github.repository }} \
               --body "⚠️ @$COMMENT_AUTHOR is not authorized to approve this PR.
